# AWS_IOT_MQTT_ESP32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/ble/: CMakeLists.txt  ble.c  ble.h
components/esp-aws-iot/: CMakeLists.txt
components/protocol_examples_common/: connect.c
main/: CMakeLists.txt  app_main.c  iot_creat.c  iot_creat.h  iot_creat.ipynb  mqtt_demo_mutual_auth.c  mqtt_demo_mutual_auth.h
main/certs/: client.crt  client.key
